syntax = "proto3";

option csharp_namespace = "EmployeeService";

import "google/protobuf/empty.proto";

service GrpcEmployeeService {
	rpc GetAllEmployees(google.protobuf.Empty) returns(GrpcEmployeeResponse);
	rpc GetEmployeeById(GrpcEmployeeId) returns(GrpcEmployeeModel);
}

message GrpcEmployeeResponse {
	repeated GrpcEmployeeModel employee = 1;
}

message GrpcEmployeeModel {
	int32 id = 1;
	string name = 2;
	string role = 3;
	string imageUrl = 4;
}

message GrpcEmployeeId {
	int32 id = 1;
}
