syntax = "proto3";

option csharp_namespace = "ProjectService";

import "google/protobuf/empty.proto";

service GrpcProjectService {
	rpc GetAllProjects(google.protobuf.Empty) returns(GrpcProjectResponse);
}

message GrpcProjectResponse {
	repeated GrpcProjectModel project = 1;
}

message GrpcProjectModel {
	int32 Id = 1;
	string Name = 2;
	string ProjectUrl = 3;
}
